// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<div
  title="description"
>
  <b>
    Boil Size
     
  </b>
  20
   
  L
</div>
`;

exports[`renders without crashing on US units 1`] = `
<div
  title="description"
>
  <b>
    Boil Size
     
  </b>
  5.28
   
  gal
</div>
`;
